tests/invalid/ambiguous_overloading_error.err_exp
ambiguous_overloading_error.m:059: In clause for predicate `ambig_overload1'/1:
ambiguous_overloading_error.m:059:   error: excessively ambiguous overloading.
ambiguous_overloading_error.m:059:   The following symbol was overloaded in the
ambiguous_overloading_error.m:059:   following contexts.
ambiguous_overloading_error.m:057:   The function symbol `f'/0.
ambiguous_overloading_error.m:057:   The possible matches are:
ambiguous_overloading_error.m:057:     the builtin type constructor
ambiguous_overloading_error.m:057:     `character',
ambiguous_overloading_error.m:057:     the type constructor
ambiguous_overloading_error.m:057:     `ambiguous_overloading_error.bar'/0,
ambiguous_overloading_error.m:057:     the type constructor
ambiguous_overloading_error.m:057:     `ambiguous_overloading_error.foo'/0.
ambiguous_overloading_error.m:058:   The function symbol `f'/0 is also
ambiguous_overloading_error.m:058:   overloaded here.
ambiguous_overloading_error.m:059: Warning: the variable `L' is unified with a
ambiguous_overloading_error.m:059:   term containing itself.
ambiguous_overloading_error.m:062: In clause for predicate `ambig_overload2'/1:
ambiguous_overloading_error.m:062:   warning: highly ambiguous overloading.
ambiguous_overloading_error.m:062:   The following symbols were overloaded in
ambiguous_overloading_error.m:062:   the following contexts.
ambiguous_overloading_error.m:062:   The function symbol `a1'/0.
ambiguous_overloading_error.m:062:   The possible matches are:
ambiguous_overloading_error.m:062:     the type constructor
ambiguous_overloading_error.m:062:     `ambiguous_overloading_error.baz'/0,
ambiguous_overloading_error.m:062:     the type constructor
ambiguous_overloading_error.m:062:     `ambiguous_overloading_error.qux'/0.
ambiguous_overloading_error.m:062:   The function symbol `a2'/0.
ambiguous_overloading_error.m:062:   The possible matches are:
ambiguous_overloading_error.m:062:     the type constructor
ambiguous_overloading_error.m:062:     `ambiguous_overloading_error.baz'/0,
ambiguous_overloading_error.m:062:     the type constructor
ambiguous_overloading_error.m:062:     `ambiguous_overloading_error.qux'/0.
ambiguous_overloading_error.m:116: In clause for predicate `test_lt'/1:
ambiguous_overloading_error.m:116:   error: excessively ambiguous overloading.
ambiguous_overloading_error.m:116:   The following symbol was overloaded in the
ambiguous_overloading_error.m:116:   following contexts.
ambiguous_overloading_error.m:067:   The predicate symbol predicate `<'/2.
ambiguous_overloading_error.m:067:   The possible matches are:
ambiguous_overloading_error.m:067:     predicate `float.<'/2,
ambiguous_overloading_error.m:067:     predicate `int.<'/2.
ambiguous_overloading_error.m:068:   The predicate symbol predicate `<'/2 is
ambiguous_overloading_error.m:068:   also overloaded here.
ambiguous_overloading_error.m:069:   The predicate symbol predicate `<'/2 is
ambiguous_overloading_error.m:069:   also overloaded here.
ambiguous_overloading_error.m:070:   The predicate symbol predicate `<'/2 is
ambiguous_overloading_error.m:070:   also overloaded here.
ambiguous_overloading_error.m:071:   The predicate symbol predicate `<'/2 is
ambiguous_overloading_error.m:071:   also overloaded here.
ambiguous_overloading_error.m:072:   The predicate symbol predicate `<'/2 is
ambiguous_overloading_error.m:072:   also overloaded here.
ambiguous_overloading_error.m:073:   The predicate symbol predicate `<'/2 is
ambiguous_overloading_error.m:073:   also overloaded here.
ambiguous_overloading_error.m:074:   The predicate symbol predicate `<'/2 is
ambiguous_overloading_error.m:074:   also overloaded here.
ambiguous_overloading_error.m:075:   The predicate symbol predicate `<'/2 is
ambiguous_overloading_error.m:075:   also overloaded here.
ambiguous_overloading_error.m:076:   The predicate symbol predicate `<'/2 is
ambiguous_overloading_error.m:076:   also overloaded here.
ambiguous_overloading_error.m:077:   The predicate symbol predicate `<'/2 is
ambiguous_overloading_error.m:077:   also overloaded here.
ambiguous_overloading_error.m:078:   The predicate symbol predicate `<'/2 is
ambiguous_overloading_error.m:078:   also overloaded here.
ambiguous_overloading_error.m:126: In clause for predicate
ambiguous_overloading_error.m:126:   `set_browser_param_from_option_table'/3:
ambiguous_overloading_error.m:126:   warning: highly ambiguous overloading.
ambiguous_overloading_error.m:126:   The following symbol was overloaded in the
ambiguous_overloading_error.m:126:   following contexts.
ambiguous_overloading_error.m:121:   The function symbol
ambiguous_overloading_error.m:121:   `lookup_bool_option'/2.
ambiguous_overloading_error.m:121:   The possible matches are:
ambiguous_overloading_error.m:121:     predicate `getopt.lookup_bool_option'/3,
ambiguous_overloading_error.m:121:     function `getopt.lookup_bool_option'/2.
ambiguous_overloading_error.m:122:   The function symbol `lookup_bool_option'/2
ambiguous_overloading_error.m:122:   is also overloaded here.
ambiguous_overloading_error.m:123:   The function symbol `lookup_bool_option'/2
ambiguous_overloading_error.m:123:   is also overloaded here.
ambiguous_overloading_error.m:124:   The function symbol `lookup_bool_option'/2
ambiguous_overloading_error.m:124:   is also overloaded here.
ambiguous_overloading_error.m:125:   The function symbol `lookup_bool_option'/2
ambiguous_overloading_error.m:125:   is also overloaded here.
ambiguous_overloading_error.m:126:   The function symbol `lookup_bool_option'/2
ambiguous_overloading_error.m:126:   is also overloaded here.
For more information, recompile with `-E'.
